osprey_worker/src/osprey/engine/query_language/tests/test_validate_count_over/test_key_must_be_column_reference.txt
error: `CountOver` key must be a column reference
--> main.sml:1:72
     |
   1 | Query = CountOver(predicate=UserLoginIp == '1.1.1.1', window='10m', key="invalid_string_literal") >= 10
     |                                                                         ^ the `key` argument must be a single column name (e.g. `key=UserId`)